README was updated.

--- a/README
+++ b/README
@@ -2,6 +2,7 @@ archiox
 =========================
 
 That's just a random kernel that I wrote, based on an internet article.
+All help and feedback is wellcome.
 
 To run with Qemu:
 make build
