--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 archiox
 =========================
 
-That's just a random kernel that I wrote, based on an internet article.
+A random kernel that I wrote, based on an internet article.
 All help and feedback is wellcome.
 
 To run with Qemu:
